done registration html

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,3 +7,4 @@ $border-color: #04787c;
 $modal-bg-color: #f5f5f5;
 $danger-color: #fc2a21;
 $hamburger-color: #04787c;
+$placeholder-color: #a9a9b6;
