--- a/scss/style.scss
+++ b/scss/style.scss
@@ -67,3 +67,31 @@ label {
 .form-control::placeholder {
   color: $placeholder-color;
 }
+
+.avatar {
+  width: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  font-size: 1rem;
+  margin: 0.5rem 0;
+}
+
+.update {
+  max-width: 80%;
+  margin-top: 1rem;
+}
+
+.credit {
+  color: $danger-color;
+}
+
+#avatar,
+#update-btn {
+  display: none;
+}
