--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,3 +112,17 @@ li {
   margin: 0 auto;
   max-width: 800px;
 }
+
+.gallery {
+  display: flex;
+}
+
+.img-thumbnail {
+  max-width: 40%;
+  margin: 1rem 0;
+  cursor: pointer;
+}
+
+.bids {
+  color: $bids-color;
+}
