--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,3 +126,10 @@ li {
 .bids {
   color: $bids-color;
 }
+
+h3 {
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.2rem;
+  border-bottom: 1px solid $border-color;
+}
