--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,3 +133,14 @@ h3 {
   font-size: 1.2rem;
   border-bottom: 1px solid $border-color;
 }
+
+.bidInput {
+  width: 100%;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.bidMessage {
+  margin-top: 1rem;
+  width: 100%;
+}
