--- a/css/style.css
+++ b/css/style.css
@@ -11994,4 +11994,26 @@ h3, .h3 {
   width: 100%;
 }
 
+.search-results {
+  max-height: 200px;
+  overflow-y: auto;
+  margin: 0 auto;
+  width: 250px;
+  background-color: #fff;
+  z-index: 1000;
+  display: none;
+  margin-top: 40px;
+}
+
+.search-results a {
+  padding: 10px;
+  border: 1px solid #04787c;
+  cursor: pointer;
+  display: block;
+}
+
+.search-results a:hover {
+  background-color: #f5f5f5;
+}
+
 /*# sourceMappingURL=style.css.map */
