--- a/scss/style.scss
+++ b/scss/style.scss
@@ -144,3 +144,23 @@ h3 {
   margin-top: 1rem;
   width: 100%;
 }
+
+.search-results {
+  max-height: 200px;
+  overflow-y: auto;
+  margin: 0 auto;
+  width: 250px;
+  background-color: #fff;
+  z-index: 1000;
+  display: none;
+  margin-top: 40px;
+}
+.search-results a {
+  padding: 10px;
+  border: 1px solid $border-color;
+  cursor: pointer;
+  display: block;
+}
+.search-results a:hover {
+  background-color: #f5f5f5;
+}
