--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 @import 'variables';
-@import '../node_modules/bootstrap//scss/bootstrap.scss';
-@import '../node_modules/bootstrap//dist//js/bootstrap.js';
+@import '/node_modules/bootstrap/scss/bootstrap.scss';
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.cdnfonts.com/css/futura-std-4');
 
